feature/tanstack-app (#2)
